refactor(nitrite): funnel predicate operator maps
Adopt the useful MongoQueryBuilder pattern in NitritePredicateVisitor by routing field-operator and expression-operator document construction through small helper methods instead of repeating nested singleton map construction at each predicate visitor branch.

Use the shared NitriteQueryOperators.operator helper for field filters, regex filters, negated filters, geo filters, array contains filters, IN/BETWEEN filters, and computed-expression comparisons. Keep the refactor behavior-neutral while making the construction path for future operators easier to audit.

Update NitriteQueryOperators.operator to allow nullable values explicitly, because null comparisons such as $eq: null and $ne: null are valid query shapes and must not use Map.of.